2004-04-02  David Bateman  <dbateman@free.fr>

	* lo-specfun.cc (besselj, bessely, besseli, besselk, besselh1, 
	besselh2, airy, biry, betainc, gammainc, do_bessel):
	New NDArray versions.
	(SN_BESSEL, NS_BESSEL, NN_BESSEL): New macros.
	* lo-specfun.h (besselj, bessely, besseli, besselk, besselh1, 
	besselh2, airy, biry, betainc, gammainc): Provide decls.
	
	* dNDArray.cc (NDArray::min, NDArray::max, min, max):
	New functions.
	* dNDArray.h (NDArray::min, NDArray::max, min, max): Provide decls.

	* CNDArray.cc (ComplexNDArray::min, ComplexNDArray::max, min, max):
	New functions.
	* CNDArray.h (ComplexNDArray::min, ComplexNDArray::max, min, max): 
	Provide decls.

2004-03-17  David Hoover  <jazzdaq@yahoo.com>

	* DASPK.cc (DASPK::do_integrate): Always add n*n elements to the
	work vector, not just when using a numerical Jacobian.

2004-03-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* so-array.cc (SND_CMP_OP, NDS_CMP_OP, NDND_CMP_OP):
	Omit empty result args.

	* Array.cc (Array<T>::Array (const Array<T>&, const dim_vector&)):
	Move here from Array.h, check that size of array arg is not
	smaller than the size defined by the new dimensions.

2004-03-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::index2): Allow result to be N-d if indexing
	a scalar or vector with an N-d array.

2004-03-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::index2): If scalar or vector is indexed by
	matrix, return object that is the same size as the index.

	* mx-op-defs.h (NDND_CMP_OP, MM_CMP_OP): Require dimensions to agree.
	Eliminate MT_RESULT args.  Return value is always size of args.
	(MS_CMP_OP, SM_CMP_OP, NDS_CMP_OP, SND_CMP_OP):
	Eliminate EMPTY_RESULT arg.
	Return value is always size of matrix or N-d array arg.
	(TBM, FBM, NBM): Delete unused macros.

2004-03-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::maybe_delete_elements): Return immediately
	if all LHS dimensions are zero.  For one index case, freeze and